--- a/API/.env
+++ b/API/.env
@@ -4,3 +4,6 @@ SECRET=gjwks@gjwt1238@skf2
 BASEURL=http://localhost:8080
 CLIENTID=YXOVoIrY79zXJKFkgnuLx7z4gKMOyGVF
 ISSUERBASEURL=https://dev-vf7l0hn2.eu.auth0.com
+
+GOOGLE_CLIENT_ID=811024745702-j8m7a24hjmm9a7808m6561dqkdj6fph1.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
