--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,7 +14,7 @@
     "@types/react-dom": "^18.0.2",
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0-beta1",
     "formik": "^2.2.9",
     "node-sass": "^7.0.1",
     "primeflex": "^3.1.3",
